--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
+        android:name=".apps.App"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.5M_2dz"
         tools:targetApi="31">
-        <activity
-            android:name=".LoveCalculate2"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
