--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
 
     //indicator
     implementation 'me.relex:circleindicator:2.1.6'
+
+    implementation 'com.airbnb.android:lottie:3.4.0'
 }
